--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-social-icons": "^5.15.0",
+    "tailwind-scrollbar": "^2.1.0",
     "typescript": "4.9.5"
   },
   "devDependencies": {
